--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <title>DuckHunt</title>
 </head>
 <body>
 <img id="background" src="assets/images/game_board.png" alt="background">
 
-<canvas id="canvas" width="768" height="720">
 
-    </canvas>
+<canvas id="canvas" width="768" height="720"></canvas>
     <script type="module" src="js/index.js" ></script>
 
 </body>
